// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button primary 1`] = `
<button
  class="flex items-center justify-center outline-none rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-400 transition-all duration-200 ease-in shadow text-white hover:shadow-md px-4 py-2 text-sm bg-primary-400 hover:bg-primary-500 active:bg-primary-600"
>
  Primary
</button>
`;

exports[`Button primary disabled 1`] = `
<button
  class="flex items-center justify-center outline-none rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-400 pointer-events-none opacity-40 transition-all duration-200 ease-in shadow text-white hover:shadow-md px-4 py-2 text-sm bg-primary-400 hover:bg-primary-500 active:bg-primary-600"
  disabled=""
  tabindex="-1"
>
  Primary
</button>
`;

exports[`Button primary large 1`] = `
<button
  class="flex items-center justify-center outline-none rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-400 transition-all duration-200 ease-in shadow text-white hover:shadow-md px-5 py-3 text-md bg-primary-400 hover:bg-primary-500 active:bg-primary-600"
>
  Primary
</button>
`;

exports[`Button secondary 1`] = `
<button
  class="flex items-center justify-center outline-none rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-400 transition-all duration-200 ease-in shadow text-white hover:shadow-md px-4 py-2 text-sm bg-secondary-400 hover:bg-secondary-500 active:bg-secondary-600"
>
  Secondary
</button>
`;

exports[`Button secondary disabled 1`] = `
<button
  class="flex items-center justify-center outline-none rounded-lg focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-400 pointer-events-none opacity-40 transition-all duration-200 ease-in shadow text-white hover:shadow-md px-4 py-2 text-sm bg-secondary-400 hover:bg-secondary-500 active:bg-secondary-600"
  disabled=""
  tabindex="-1"
>
  Secondary
</button>
`;
